--- a/script/RNotebook/articulation.Rmd
+++ b/script/RNotebook/articulation.Rmd
@@ -24,6 +24,8 @@ editor_options:
   
 - Order analysis (teaching/performing first?)
   + [All](#kot_art_order_group_all)
+  
+- [Sequence plot](#sequence_art)
 
 #### KOR
 - Individual results
@@ -50,6 +52,8 @@ editor_options:
   
 - Order analysis (teaching/performing first?)
   + [All](#kot_dyn_order_group_all)
+  
+- [Sequence plot](#sequence_dyn)
 
 #### KOR
 - Individual results
@@ -1116,4 +1120,55 @@ kor_dyn_order_aov <- ezANOVA(
 kor_dyn_order_aov$ANOVA$F <- round(kor_dyn_order_aov$ANOVA$F, 4)
 kor_dyn_order_aov$ANOVA$p <- round(kor_dyn_order_aov$ANOVA$p, 4)
 print(kor_dyn_order_aov)
+```
+
+## Sequence plot
+#### Articulation{#sequence_art}
+```{r seq_art, fig.width = 15, fig.height = 5, echo = FALSE}
+# For each individual
+kot_art_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_art,
+                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
+kot_art_seq <- cbind(kot_art_seq[,1:4], as.data.frame(kot_art_seq[,5]))
+# Change colnames
+colnames(kot_art_seq) <- c("SubNr", "Condition", "Skill", "Interval", "N", "Mean", "SD")
+
+# Group mean
+kot_art_seq_stats <- aggregate(Mean~Condition*Skill*Interval, data = kot_art_seq,
+                           FUN = function(x){round(c(length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+kot_art_seq_stats <- cbind(kot_art_seq_stats[,1:3], as.data.frame(kot_art_seq_stats[,4]))
+# Change colnames for each interval
+colnames(kot_art_seq_stats) <- c("Condition", "Skill", "Interval", "N", "Mean", "SD", "SEM")
+
+p_kot_art_seq <- ggplot(data = kot_art_seq_stats, aes(x = Interval, y = Mean, group = Condition, shape = Condition, colour = Condition)) +
+  geom_line() +
+  geom_point() +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width=.2,
+                position = position_dodge(.05)) + 
+  labs(x = "Interval", y = "KOT (ms)") + scale_x_continuous(breaks=seq(1,66,1))
+p_kot_art_seq
+```
+
+#### Dynamics{#sequence_dyn}
+```{r seq_dyn, fig.width = 15, fig.height = 5, echo = FALSE}
+# For each individual
+kot_dyn_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_dyn,
+                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
+kot_dyn_seq <- cbind(kot_dyn_seq[,1:4], as.data.frame(kot_dyn_seq[,5]))
+# Change colnames
+colnames(kot_dyn_seq) <- c("SubNr", "Condition", "Skill", "Interval", "N", "Mean", "SD")
+
+# Group mean
+kot_dyn_seq_stats <- aggregate(Mean~Condition*Skill*Interval, data = kot_dyn_seq,
+                           FUN = function(x){round(c(length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+kot_dyn_seq_stats <- cbind(kot_dyn_seq_stats[,1:3], as.data.frame(kot_dyn_seq_stats[,4]))
+# Change colnames for each interval
+colnames(kot_dyn_seq_stats) <- c("Condition", "Skill", "Interval", "N", "Mean", "SD", "SEM")
+
+p_kot_dyn_seq <- ggplot(data = kot_dyn_seq_stats, aes(x = Interval, y = Mean, group = Condition, shape = Condition, colour = Condition)) +
+  geom_line() +
+  geom_point() +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width=.2,
+                position = position_dodge(.05)) + 
+  labs(x = "Interval", y = "KOT (ms)") + scale_x_continuous(breaks=seq(1,66,1))
+p_kot_dyn_seq
 ```
